versioned_docs/version-2.7/reference/goals/peek.mdx
---
title: peek
description: |
  Display BUILD target info
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

```
pants peek [args]
```

Display BUILD target info

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[peek]`</span>

<span className={styles.options}>

## Basic options

### `output_file`

<Option
  cli_repr={`--peek-output-file=<path>`}
  env_repr='PANTS_PEEK_OUTPUT_FILE'
  toml_repr={`[peek]
output_file = <path>`}
  default_repr={`None`}
>

Output the goal&#x27;s stdout to this file. If unspecified, outputs to stdout.

</Option>

### `output`

<Option
  cli_repr={`--peek-output=<OutputOptions>`}
  env_repr='PANTS_PEEK_OUTPUT'
  toml_repr={`[peek]
output = <OutputOptions>`}
  one_of='raw, json'
  default_repr={`json`}
>

Which output style peek should use: `json` will show each target as a seperate entry, whereas `raw` will simply show the original non-normalized BUILD files.

</Option>

### `exclude_defaults`

<Option
  cli_repr={`--[no-]peek-exclude-defaults`}
  env_repr='PANTS_PEEK_EXCLUDE_DEFAULTS'
  toml_repr={`[peek]
exclude_defaults = <bool>`}
  default_repr={`False`}
>

Whether to leave off values that match the target-defined default values when using `json` output.

</Option>

## Advanced options

None

## Deprecated options

None

## Related subsystems

None

</span>
